# SateLight

./: README.md
RealWorldDeployment/: satellite.py  start.sh
RealWorldDeployment/workspace/: appoci.tar
SateLightCode/: detection.py  dir_change_js.py  dir_change_m.py  file_change_js.py  file_change_m.py  get_change_rate.py  myers.py  substitute.py  write_diff.py
SatelliteApplications/App1/: Dockerfile  Dockerfilearm  Dockerfiletest
SatelliteApplications/App1/10%/: hubconf.py  train.py  val.py
SatelliteApplications/App1/20%/: benchmarks.py  detect.py  export.py  train.py
SatelliteApplications/App10/: Dockerfile
SatelliteApplications/App10/10%/: EarthPlusSim  main.cpp
SatelliteApplications/App10/20%/: CMakeLists.txt  EarthPlusSim  main.cpp
SatelliteApplications/App10/20%/include/: change_detection.hpp
SatelliteApplications/App10/20%/src/: illumination_alignment.cpp  image_io.cpp
SatelliteApplications/App10/50%/: EarthPlusSim  main.cpp
SatelliteApplications/App10/images/: current_capture.tif  reference.tif
SatelliteApplications/App10/origin/: EarthPlusSim  main.cpp
SatelliteApplications/App2/: Dockerfile
SatelliteApplications/App2/10%/: core_nf_simulation  (+1 more)
SatelliteApplications/App3/: Dockerfile
SatelliteApplications/App4/: Dockerfile
SatelliteApplications/App5/: dockerfile
SatelliteApplications/App6/: Dockerfile  best.pt  requirements.txt
SatelliteApplications/App7/: Dockerfile
SatelliteApplications/App7/origin/: CMakeLists.txt  main.cpp  ovx1_app_cn
SatelliteApplications/App8/: Dockerfile
SatelliteApplications/App9/: dockerfile
(+207 files in other folders)
